package main

import (
	"context"
	"encoding/json"
	"fmt"
	"log"
	"net/http"
	"os"
	"regexp"
	"strconv"
	"time"

	"connectrpc.com/connect"
	"github.com/jackc/pgx/v5/pgtype"
	"github.com/jackc/pgx/v5/pgxpool"
	"github.com/joho/godotenv"
	"golang.org/x/net/http2"
	"golang.org/x/net/http2/h2c"

	// ç”Ÿæˆã•ã‚ŒãŸã‚³ãƒ¼ãƒ‰ã®ã‚¤ãƒ³ãƒãƒ¼ãƒˆ
	"github.com/kinchoKayaba/pixicast/backend/db" // â˜…sqlcãŒä½œã£ãŸã‚³ãƒ¼ãƒ‰
	pixicastv1 "github.com/kinchoKayaba/pixicast/backend/gen/pixicast/v1"
	"github.com/kinchoKayaba/pixicast/backend/gen/pixicast/v1/pixicastv1connect"
	"github.com/kinchoKayaba/pixicast/backend/internal/auth"
	"github.com/kinchoKayaba/pixicast/backend/internal/http/handlers"
	"github.com/kinchoKayaba/pixicast/backend/internal/podcast"
	"github.com/kinchoKayaba/pixicast/backend/internal/twitch"
	"github.com/kinchoKayaba/pixicast/backend/internal/youtube"
)

// ã‚µãƒ¼ãƒãƒ¼æ§‹é€ ä½“
// ç”Ÿã®DBæ¥ç¶šã§ã¯ãªãã€sqlcãŒç”Ÿæˆã—ãŸã€ŒQueriesã€ã‚’æŒã¡ã¾ã™
type TimelineServer struct {
	queries      *db.Queries
	youtube      *youtube.Client
	firebaseAuth *auth.FirebaseAuth
}

// parseDuration ã¯ ISO 8601 duration (PT1H30M15S) ã‚’ "01:30:15" å½¢å¼ã«å¤‰æ›
func parseDuration(isoDuration string) string {
	if isoDuration == "" {
		return "00:00"
	}

	re := regexp.MustCompile(`PT(?:(\d+)H)?(?:(\d+)M)?(?:(\d+)S)?`)
	matches := re.FindStringSubmatch(isoDuration)
	if matches == nil {
		return "00:00"
	}

	hours, _ := strconv.Atoi(matches[1])
	minutes, _ := strconv.Atoi(matches[2])
	seconds, _ := strconv.Atoi(matches[3])

	if hours > 0 {
		return fmt.Sprintf("%02d:%02d:%02d", hours, minutes, seconds)
	}
	return fmt.Sprintf("%02d:%02d", minutes, seconds)
}

// ã‚¿ã‚¤ãƒ ãƒ©ã‚¤ãƒ³å–å¾—
func (s *TimelineServer) GetTimeline(
	ctx context.Context,
	req *connect.Request[pixicastv1.GetTimelineRequest],
) (*connect.Response[pixicastv1.GetTimelineResponse], error) {
	log.Printf("GetTimeline called for date: %s, youtube_channel_ids: %v, before_time: %s, limit: %d", 
		req.Msg.Date, req.Msg.YoutubeChannelIds, req.Msg.BeforeTime, req.Msg.Limit)

	// ãƒªã‚¯ã‚¨ã‚¹ãƒˆãƒ‘ãƒ©ãƒ¡ãƒ¼ã‚¿ã®å‡¦ç†
	limit := int32(req.Msg.Limit)
	if limit <= 0 {
		limit = 50 // ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆ50ä»¶
	}
	if limit > 100 {
		limit = 100 // æœ€å¤§100ä»¶
	}

	// before_timeã®å‡¦ç†
	var beforeTime pgtype.Timestamptz
	if req.Msg.BeforeTime != "" {
		t, err := time.Parse(time.RFC3339, req.Msg.BeforeTime)
		if err != nil {
			log.Printf("Failed to parse before_time: %v", err)
			return nil, connect.NewError(connect.CodeInvalidArgument, fmt.Errorf("invalid before_time format"))
		}
		beforeTime = pgtype.Timestamptz{Time: t, Valid: true}
	} else {
		beforeTime = pgtype.Timestamptz{Valid: false}
	}

	// èªè¨¼: user_idã‚’å–å¾—
	authHeader := req.Header().Get("Authorization")
	if authHeader == "" {
		log.Printf("âŒ GetTimeline: Authorization header is missing")
		return nil, connect.NewError(connect.CodeUnauthenticated, fmt.Errorf("authentication required"))
	}

	idToken, err := auth.ExtractTokenFromHeader(authHeader)
	if err != nil {
		log.Printf("âŒ GetTimeline: Failed to extract token: %v", err)
		return nil, connect.NewError(connect.CodeUnauthenticated, fmt.Errorf("invalid authorization header"))
	}

	token, err := s.firebaseAuth.VerifyIDToken(ctx, idToken)
	if err != nil {
		log.Printf("âŒ GetTimeline: Failed to verify token: %v", err)
		return nil, connect.NewError(connect.CodeUnauthenticated, fmt.Errorf("invalid token"))
	}

	userID := auth.GetUserIDFromToken(token)
	log.Printf("âœ… GetTimeline: Authenticated user_id=%d", userID)

	// 1. DBã‹ã‚‰ãƒ‡ãƒ¼ã‚¿ã‚’å–å¾— (SQLå®Ÿè¡Œ) - æ–°ã‚¹ã‚­ãƒ¼ãƒã®ListTimelineã‚’ä½¿ç”¨
	// limit+1ä»¶å–å¾—ã—ã¦ã€has_moreã‚’åˆ¤å®š
	
	// ãƒãƒ£ãƒ³ãƒãƒ«IDã®é…åˆ—ã‚’æº–å‚™ï¼ˆç©ºé…åˆ—ã®å ´åˆã¯nilã‚’æ¸¡ã™ï¼‰
	var channelIds []string
	if len(req.Msg.YoutubeChannelIds) > 0 {
		channelIds = req.Msg.YoutubeChannelIds
	}
	
	timelineData, err := s.queries.ListTimeline(ctx, db.ListTimelineParams{
		UserID:     userID,
		Column2:    beforeTime,
		Limit:      limit + 1, // 1ä»¶å¤šãå–å¾—ã—ã¦has_moreã‚’åˆ¤å®š
		ChannelIds: channelIds,
	})
	if err != nil {
		log.Printf("Failed to fetch timeline: %v", err)
		return nil, connect.NewError(connect.CodeInternal, fmt.Errorf("database error"))
	}
	log.Printf("ğŸ“Š DB timeline events fetched: %d (requested: %d), channel_ids: %v", len(timelineData), limit, channelIds)

	// 2. DBã®å‹(db.ListTimelineRow) ã‚’ gRPCã®å‹(pixicastv1.Program) ã«å¤‰æ›
	var responsePrograms []*pixicastv1.Program
	for _, event := range timelineData {
		// æ”¾é€ä¸­ã‹ã©ã†ã‹ã®ç°¡æ˜“åˆ¤å®š
		now := time.Now()
		isLive := event.Type == "live" && 
			event.StartAt.Valid && 
			now.After(event.StartAt.Time) &&
			(!event.EndAt.Valid || now.Before(event.EndAt.Time))

		// NULLè¨±å®¹ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰ã®å‡¦ç†
		imageUrl := ""
		if event.ImageUrl.Valid {
			imageUrl = event.ImageUrl.String
		}
		description := ""
		if event.Description.Valid {
			description = event.Description.String
		}
		channelTitle := ""
		if event.SourceDisplayName.Valid {
			channelTitle = event.SourceDisplayName.String
		}
		channelThumbnailUrl := ""
		if event.SourceThumbnailUrl.Valid {
			channelThumbnailUrl = event.SourceThumbnailUrl.String
		}

		// start_at ã¾ãŸã¯ published_at ã‚’ä½¿ç”¨
		startAt := ""
		publishedAt := ""
		if event.StartAt.Valid {
			startAt = event.StartAt.Time.Format(time.RFC3339)
		} else if event.PublishedAt.Valid {
			startAt = event.PublishedAt.Time.Format(time.RFC3339)
			publishedAt = event.PublishedAt.Time.Format(time.RFC3339)
		}

		endAt := ""
		if event.EndAt.Valid {
			endAt = event.EndAt.Time.Format(time.RFC3339)
		} else if event.PublishedAt.Valid {
			endAt = event.PublishedAt.Time.Format(time.RFC3339)
		}

		// metricsã‹ã‚‰å†ç”Ÿå›æ•°ã‚’å–å¾—
		viewCount := int64(0)
		if len(event.Metrics) > 0 {
			var metricsData map[string]interface{}
			if err := json.Unmarshal(event.Metrics, &metricsData); err == nil {
				if views, ok := metricsData["views"].(float64); ok {
					viewCount = int64(views)
				}
			}
		}

		// durationã®å–å¾—
		duration := ""
		if event.Duration.Valid {
			duration = event.Duration.String
		}

		responsePrograms = append(responsePrograms, &pixicastv1.Program{
			Id:                  event.ID.String(),
			Title:               event.Title,
			StartAt:             startAt,
			EndAt:               endAt,
			PlatformName:        event.PlatformID,
			ImageUrl:            imageUrl,
			LinkUrl:             event.Url,
			IsLive:              isLive,
			ChannelTitle:        channelTitle,
			Description:         description,
			Duration:            duration,
			PublishedAt:         publishedAt,
			ViewCount:           viewCount,
			ChannelThumbnailUrl: channelThumbnailUrl,
		})
	}

	// has_moreã¨next_cursorã®è¨­å®š
	hasMore := false
	nextCursor := ""
	
	// limit+1ä»¶å–å¾—ã—ãŸå ´åˆã€æœ€å¾Œã®1ä»¶ã‚’é™¤ã„ã¦has_more=trueã«è¨­å®š
	if len(timelineData) > int(limit) {
		hasMore = true
		responsePrograms = responsePrograms[:limit] // æœ€å¾Œã®1ä»¶ã‚’é™¤ã
		
		// æœ€å¾Œã®ãƒ—ãƒ­ã‚°ãƒ©ãƒ ã®æ™‚åˆ»ã‚’next_cursorã¨ã—ã¦è¨­å®š
		lastProgram := responsePrograms[len(responsePrograms)-1]
		if lastProgram.PublishedAt != "" {
			nextCursor = lastProgram.PublishedAt
		} else {
			nextCursor = lastProgram.StartAt
		}
	}

	log.Printf("ğŸ“¤ Returning %d programs, has_more: %v", len(responsePrograms), hasMore)

	// ãƒ¬ã‚¹ãƒãƒ³ã‚¹ã‚’è¿”ã™ï¼ˆDBã‚¯ã‚¨ãƒªã§æ—¢ã«ã‚½ãƒ¼ãƒˆæ¸ˆã¿ï¼‰
	return connect.NewResponse(&pixicastv1.GetTimelineResponse{
		Programs:   responsePrograms,
		HasMore:    hasMore,
		NextCursor: nextCursor,
	}), nil
}

func (s *TimelineServer) SearchYouTubeLive(
	ctx context.Context,
	req *connect.Request[pixicastv1.SearchYouTubeLiveRequest],
) (*connect.Response[pixicastv1.SearchYouTubeLiveResponse], error) {
	log.Printf("SearchYouTubeLive called with query: %s, max_results: %d", req.Msg.Query, req.Msg.MaxResults)

	// ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆå€¤ã®è¨­å®š
	maxResults := int64(req.Msg.MaxResults)
	if maxResults <= 0 {
		maxResults = 10
	}
	if maxResults > 50 {
		maxResults = 50
	}

	// YouTube APIã§ãƒ©ã‚¤ãƒ–é…ä¿¡ã‚’æ¤œç´¢
	streams, err := s.youtube.SearchLiveStreams(ctx, req.Msg.Query, maxResults)
	if err != nil {
		log.Printf("Failed to search YouTube live streams: %v", err)
		return nil, connect.NewError(connect.CodeInternal, fmt.Errorf("YouTube API error"))
	}

	// ãƒ¬ã‚¹ãƒãƒ³ã‚¹ã«å¤‰æ›
	var responseStreams []*pixicastv1.YouTubeLiveStream
	for _, stream := range streams {
		thumbnailUrl := ""
		if stream.Snippet.Thumbnails != nil && stream.Snippet.Thumbnails.High != nil {
			thumbnailUrl = stream.Snippet.Thumbnails.High.Url
		}

		responseStreams = append(responseStreams, &pixicastv1.YouTubeLiveStream{
			VideoId:      stream.Id.VideoId,
			Title:        stream.Snippet.Title,
			ChannelTitle: stream.Snippet.ChannelTitle,
			Description:  stream.Snippet.Description,
			ThumbnailUrl: thumbnailUrl,
			PublishedAt:  stream.Snippet.PublishedAt,
		})
	}

	return connect.NewResponse(&pixicastv1.SearchYouTubeLiveResponse{
		Streams: responseStreams,
	}), nil
}

func main() {
	// ç’°å¢ƒå¤‰æ•°ãƒ•ã‚¡ã‚¤ãƒ«ã‚’èª­ã¿è¾¼ã‚€ï¼ˆãƒ­ãƒ¼ã‚«ãƒ«é–‹ç™ºç”¨ï¼‰
	// Cloud Runãªã©ã®æœ¬ç•ªç’°å¢ƒã§ã¯ç’°å¢ƒå¤‰æ•°ã‚’ç›´æ¥è¨­å®šã™ã‚‹ã®ã§ã€.envãƒ•ã‚¡ã‚¤ãƒ«ã¯ä¸è¦
	// GO_ENV ãŒ production ãªã‚‰ .env.productionã€ãã‚Œä»¥å¤–ã¯ .env.dev ã‚’è©¦ã¿ã‚‹
	envFile := ".env.dev"
	if os.Getenv("GO_ENV") == "production" {
		envFile = ".env.production"
	}
	// ãƒ•ã‚¡ã‚¤ãƒ«ãŒå­˜åœ¨ã—ãªãã¦ã‚‚ã‚¨ãƒ©ãƒ¼ã«ã—ãªã„ï¼ˆæœ¬ç•ªç’°å¢ƒã§ã¯ç’°å¢ƒå¤‰æ•°ãŒç›´æ¥è¨­å®šã•ã‚Œã‚‹ï¼‰
	if err := godotenv.Load(envFile); err != nil {
		log.Printf("Info: .env file not loaded (%s), using system environment variables", envFile)
	} else {
		log.Printf("âœ… Loaded environment from %s", envFile)
	}

	// YouTube API ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã®åˆæœŸåŒ–
	youtubeAPIKey := os.Getenv("YOUTUBE_API_KEY")
	if youtubeAPIKey == "" {
		log.Fatal("YOUTUBE_API_KEY environment variable is not set")
	}

	youtubeClient, err := youtube.NewClient(youtubeAPIKey)
	if err != nil {
		log.Fatalf("Failed to create YouTube client: %v", err)
	}
	fmt.Println("âœ… YouTube API client initialized successfully!")

	// Twitch API ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã®åˆæœŸåŒ–
	twitchClient := twitch.NewClient()
	fmt.Println("âœ… Twitch API client initialized successfully!")

	// Podcast ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã®åˆæœŸåŒ–
	podcastClient := podcast.NewClient()
	fmt.Println("âœ… Podcast client initialized successfully!")

	// Firebase Auth ã®åˆæœŸåŒ–
	firebaseAuth, err := auth.NewFirebaseAuth(context.Background())
	if err != nil {
		log.Fatalf("Failed to initialize Firebase Auth: %v", err)
	}
	fmt.Println("âœ… Firebase Auth initialized successfully!")

	dbUrl := os.Getenv("DATABASE_URL")
	if dbUrl == "" {
		log.Fatal("DATABASE_URL environment variable is not set")
	}

	// DBæ¥ç¶š
	pool, err := pgxpool.New(context.Background(), dbUrl)
	if err != nil {
		log.Fatalf("Unable to connect to database: %v", err)
	}
	defer pool.Close()

	// ç–é€šç¢ºèª
	if err = pool.Ping(context.Background()); err != nil {
		log.Fatalf("Failed to ping database: %v", err)
	}
	fmt.Println("âœ… Connected to CockroachDB successfully!")

	// â˜…ã“ã“ãŒãƒã‚¤ãƒ³ãƒˆ: DBæ¥ç¶šã‚’ä½¿ã£ã¦ sqlc ã® Queries ã‚’ä½œæˆ
	queries := db.New(pool)

	// ã‚µãƒ¼ãƒãƒ¼ã«æ¸¡ã™
	server := &TimelineServer{
		queries:      queries,
		youtube:      youtubeClient,
		firebaseAuth: firebaseAuth,
	}

	path, handler := pixicastv1connect.NewTimelineServiceHandler(server)
	
	// CORSãƒŸãƒ‰ãƒ«ã‚¦ã‚§ã‚¢ã‚’è¿½åŠ 
	corsHandler := func(h http.Handler) http.Handler {
		return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
			w.Header().Set("Access-Control-Allow-Origin", "*")
			w.Header().Set("Access-Control-Allow-Methods", "GET, POST, OPTIONS")
			w.Header().Set("Access-Control-Allow-Headers", "Content-Type, Connect-Protocol-Version, Connect-Timeout-Ms, Authorization")
			w.Header().Set("Access-Control-Expose-Headers", "Connect-Protocol-Version, Connect-Timeout-Ms")
			
			// ãƒ—ãƒªãƒ•ãƒ©ã‚¤ãƒˆãƒªã‚¯ã‚¨ã‚¹ãƒˆã«å¯¾å¿œ
			if r.Method == "OPTIONS" {
				w.WriteHeader(http.StatusOK)
				return
			}
			
			h.ServeHTTP(w, r)
		})
	}
	
	// Subscription ãƒãƒ³ãƒ‰ãƒ©ã‚’ä½œæˆ
	subscriptionHandler := handlers.NewSubscriptionHandler(queries, youtubeClient, twitchClient, podcastClient, firebaseAuth)
	
	mux := http.NewServeMux()
	mux.Handle(path, corsHandler(handler))
	
	// REST APIã‚¨ãƒ³ãƒ‰ãƒã‚¤ãƒ³ãƒˆ
	mux.HandleFunc("/v1/subscriptions", func(w http.ResponseWriter, r *http.Request) {
		// CORSå‡¦ç†
		w.Header().Set("Access-Control-Allow-Origin", "*")
		w.Header().Set("Access-Control-Allow-Methods", "GET, POST, OPTIONS")
		w.Header().Set("Access-Control-Allow-Headers", "Content-Type, Authorization")
		
		if r.Method == "OPTIONS" {
			w.WriteHeader(http.StatusOK)
			return
		}
		
		if r.Method == "GET" {
			subscriptionHandler.ListSubscriptions(w, r)
			return
		}
		
		if r.Method == "POST" {
			subscriptionHandler.CreateSubscription(w, r)
			return
		}
		
		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
	})
	
	// GET /v1/me - ãƒ¦ãƒ¼ã‚¶ãƒ¼æƒ…å ±ã¨ãƒ—ãƒ©ãƒ³æƒ…å ±ã‚’å–å¾—
	mux.HandleFunc("/v1/me", func(w http.ResponseWriter, r *http.Request) {
		// CORSå‡¦ç†
		w.Header().Set("Access-Control-Allow-Origin", "*")
		w.Header().Set("Access-Control-Allow-Methods", "GET, OPTIONS")
		w.Header().Set("Access-Control-Allow-Headers", "Content-Type, Authorization")
		
		if r.Method == "OPTIONS" {
			w.WriteHeader(http.StatusOK)
			return
		}
		
		if r.Method == "GET" {
			subscriptionHandler.GetMe(w, r)
			return
		}
		
		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
	})
	
	// DELETE /v1/subscriptions/{channelId}
	// POST /v1/subscriptions/{channelId}/favorite
	mux.HandleFunc("/v1/subscriptions/", func(w http.ResponseWriter, r *http.Request) {
		// CORSå‡¦ç†
		w.Header().Set("Access-Control-Allow-Origin", "*")
		w.Header().Set("Access-Control-Allow-Methods", "GET, POST, DELETE, OPTIONS")
		w.Header().Set("Access-Control-Allow-Headers", "Content-Type, Authorization")
		
		if r.Method == "OPTIONS" {
			w.WriteHeader(http.StatusOK)
			return
		}
		
		// POST ã§ /favorite ã§çµ‚ã‚ã‚‹å ´åˆã¯ToggleFavorite
		if r.Method == "POST" && len(r.URL.Path) > 0 && r.URL.Path[len(r.URL.Path)-9:] == "/favorite" {
			subscriptionHandler.ToggleFavorite(w, r)
			return
		}
		if r.Method == "DELETE" {
			subscriptionHandler.DeleteSubscription(w, r)
			return
		}
		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
	})

	port := os.Getenv("PORT")
	if port == "" {
		port = "8080"
	}
	addr := ":" + port

	fmt.Printf("Starting Pixicast Server (Timeline Mode) on %s ...\n", addr)
	err = http.ListenAndServe(
		addr,
		h2c.NewHandler(mux, &http2.Server{}),
	)
	if err != nil {
		log.Fatalf("Server failed: %v", err)
	}
}